k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-server
  template:
    metadata:
      labels:
        app: auth-server
    spec:
      containers:
        - name: auth-server
          image: amdp-registry.skala-ai.com/skala26a-cloud/team3-main-server:latest
          ports:
            - containerPort: 8080
