k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-server
  namespace: default
spec:
  selector:
    app: auth-server
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
